updated recipe page

--- a/single-recipe.html
+++ b/single-recipe.html
@@ -45,21 +45,13 @@
     <main class="page">
       <div class="recipe-page">
         <section class="recipe-hero">
-          <img
-            src="./assets/recipes/recipe-4.jpeg"
-            class="img recipe-hero-img"
+          <img src="./assets/recipes/recipe-4.jpeg"
+            class="img recipe-hero-img" alt="food"
           />
           <article class="recipe-info">
             <h2>Banana Pancakes</h2>
             <p>
-              Shabby chic humblebrag banh mi bushwick, banjo kale chips
-              meggings. Cred selfies sartorial, cloud bread disrupt blue bottle
-              seitan. Dreamcatcher tousled bitters, health goth vegan venmo
-              whatever street art lyft shabby chic pitchfork beard. Drinking
-              vinegar poke tbh, iPhone coloring book polaroid truffaut tousled
-              ramps pug trust fund letterpress. Portland four loko austin
-              chicharrones bitters single-origin coffee. Leggings letterpress
-              occupy pour-over.
+              Fluffy and sweet banana pancakes perfect for a cozy breakfast. Made with ripe bananas and served with maple syrup.
             </p>
             <div class="recipe-icons">
               <article>
@@ -97,8 +89,7 @@
                 <div></div>
               </header>
               <p>
-                I'm baby mustache man braid fingerstache small batch venmo
-                succulents shoreditch.
+                Mash ripe bananas in a bowl. Add eggs, milk, and vanilla extract. Mix well.
               </p>
             </div>
             <div class="single-instruction">
@@ -107,9 +98,7 @@
                 <div></div>
               </header>
               <p>
-                Pabst pitchfork you probably haven't heard of them, asymmetrical
-                seitan tousled succulents wolf banh mi man bun bespoke selfies
-                freegan ethical hexagon.
+                Stir in pancake mix until the batter is smooth but slightly lumpy.
               </p>
             </div>
             <div class="single-instruction">
@@ -118,8 +107,7 @@
                 <div></div>
               </header>
               <p>
-                Polaroid iPhone bitters chambray. Cornhole swag kombucha
-                live-edge.
+                Pour batter onto a heated skillet. Cook until bubbles form, flip, and cook the other side.
               </p>
             </div>
           </article>
@@ -127,14 +115,15 @@
             <div>
               <h4>ingredients</h4>
               <p class="single-ingredient">1 1/2 cups dry pancake mix</p>
-              <p class="single-ingredient">1/2 cup flax seed meal</p>
-              <p class="single-ingredient">1 cup skim milk</p>
+              <p class="single-ingredient">2 ripe bananas</p>
+              <p class="single-ingredient">1 cup milk</p>
+              <p class="single-ingredient">1 tsp vanilla extract</p>
             </div>
             <div>
               <h4>tools</h4>
-              <p class="single-tool">Hand Blender</p>
-              <p class="single-tool">Large Heavy Pot With Lid</p>
-              <p class="single-tool">Measuring Spoons</p>
+              <p class="single-tool">Mixing Bowl</p>
+              <p class="single-tool">Whisk</p>
+              <p class="single-tool">Non-stick Pan</p>
               <p class="single-tool">Measuring Cups</p>
             </div>
           </article>
